example/registry-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
spec:
  template:
    spec:
      containers:
        - name: docker-registry
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: docker-registry-frontend
spec:
  template:
    spec:
      containers:
        - name: oauth
