example/registry-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: docker-registry-internal
  labels:
    kubernetes.io/ingress.class: traefik-private-tls
  annotations:
    external-dns.alpha.kubernetes.io/target: private.example.com
spec:
  rules:
    - host: registry-browser.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: docker-registry
              servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    kubernetes.io/ingress.class: traefik-public-tls
  annotations:
    external-dns.alpha.kubernetes.io/target: public.example.com
  name: docker-registry
spec:
  rules:
    - host: registry.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: docker-registry
              servicePort: 8080
